DemoWebApp/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-web-app
  namespace: volumes
spec:
  selector:
      matchLabels:
        app: demo-web-app
  replicas: 1
  template:
      metadata:
        labels:
            app: demo-web-app
      spec:
        containers:
        - name: demo-web-app
          image: acrforaksdemo001.azurecr.io/demo-web-app:v1
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          volumeMounts:
          - name: azurefileshare
            mountPath: /app/wwwroot/azurevolume
          readinessProbe:
            httpGet:
              port: 80
              path: /
          livenessProbe:
            httpGet:
              port: 80
              path: /
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
        volumes:
        - name: azurefileshare
          azureFile:
            secretName: storage-secret
            shareName: aksvolume
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: demo-web-app
  namespace: volumes
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: demo-web-app
